; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_test_create_img_elem.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_test_create_img_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_create_img_elem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_create_img_elem(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @create_img_elem(i32* %4, i32 10, i32 15)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @test_img_put_width(i32* %9, i32 5)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @test_img_put_height(i32* %11, i32 20)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @IHTMLImgElement_Release(i32* %13)
  store i32* null, i32** %3, align 8
  br label %15

15:                                               ; preds = %8, %1
  %16 = load i32*, i32** %2, align 8
  %17 = call i32* @create_img_elem(i32* %16, i32 -1, i32 -1)
  store i32* %17, i32** %3, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %15
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @test_img_put_width(i32* %21, i32 5)
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @test_img_put_height(i32* %23, i32 20)
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @IHTMLImgElement_Release(i32* %25)
  br label %27

27:                                               ; preds = %20, %15
  ret void
}

declare dso_local i32* @create_img_elem(i32*, i32, i32) #1

declare dso_local i32 @test_img_put_width(i32*, i32) #1

declare dso_local i32 @test_img_put_height(i32*, i32) #1

declare dso_local i32 @IHTMLImgElement_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
